--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "author": "Michael",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   }
 }
